--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <li><a href="OCR/2016-lee-recursive-recurrent-attention-wild.pdf">2016-lee-recursive-recurrent-attention-wild</a></li>
 <li><a href="OCR/2016-lee-recursive-recurrent-ocr-wild.pdf">2016-lee-recursive-recurrent-ocr-wild</a></li>
 </ul>
-<h2 id="unclassified">Unclassified</h2>
+<h2 id="additional-readings">Additional Readings</h2>
 <ul>
 <li><a href="General/2014-donahue-long-term-rcnn.pdf">2014-donahue-long-term-rcnn</a></li>
 <li><a href="General/2014-karpathy-image-descriptions.pdf">2014-karpathy-image-descriptions</a></li>
