Added more readings.

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 </ul>
 <h2 id="additional-readings">Additional Readings</h2>
 <ul>
+<li><a href="More/2013-goodfellow-maxout.pdf">2013-goodfellow-maxout</a></li>
 <li><a href="General/2014-donahue-long-term-rcnn.pdf">2014-donahue-long-term-rcnn</a></li>
 <li><a href="General/2014-karpathy-image-descriptions.pdf">2014-karpathy-image-descriptions</a></li>
 <li><a href="General/2015-liu-face-attributes-wild.pdf">2015-liu-face-attributes-wild</a></li>
@@ -170,10 +171,18 @@
 <li><a href="General/2015-zhang-character-level-convnets-text.pdf">2015-zhang-character-level-convnets-text</a></li>
 <li><a href="General/2015-zheng-crfs-as-rnns.pdf">2015-zheng-crfs-as-rnns</a></li>
 <li><a href="General/2016-abadi-tensorflow.pdf">2016-abadi-tensorflow</a></li>
+<li><a href="More/2016-ba-layernorm.pdf">2016-ba-layernorm</a></li>
 <li><a href="General/2016-mnih-async-dl.pdf">2016-mnih-async-dl</a></li>
-<li><a href="General/2018-burda-curiosity.pdf">2018-burda-curiosity</a></li>
-<li><a href="General/2018-metz-metalearning.pdf">2018-metz-metalearning</a></li>
-<li><a href="General/2017-wang-tacotron.pdf">2017-wang-tacotron</a></li>
+<li><a href="More/2016-salimans-weightnorm.pdf">2016-salimans-weightnorm</a></li>
+<li><a href="More/2016-shi-superresolution.pdf">2016-shi-superresolution</a></li>
+<li><a href="More/2016-ulyanof-instancenorm.pdf">2016-ulyanof-instancenorm</a></li>
 <li><a href="General/2016-vinyals-matching-networks.pdf">2016-vinyals-matching-networks</a></li>
 <li><a href="General/2016-zhang-very-deep-speech.pdf">2016-zhang-very-deep-speech</a></li>
+<li><a href="More/2017-barron-celu.pdf">2017-barron-celu</a></li>
+<li><a href="More/2017-hochrreiter-self-normalizing-networks.pdf">2017-hochrreiter-self-normalizing-networks</a></li>
+<li><a href="More/2017-ioffe-batchnorm.pdf">2017-ioffe-batchnorm</a></li>
+<li><a href="General/2017-wang-tacotron.pdf">2017-wang-tacotron</a></li>
+<li><a href="General/2018-burda-curiosity.pdf">2018-burda-curiosity</a></li>
+<li><a href="General/2018-metz-metalearning.pdf">2018-metz-metalearning</a></li>
+<li><a href="More/2018-wu-groupnorm.pdf">2018-wu-groupnorm</a></li>
 </ul>
