--- a/index.html
+++ b/index.html
@@ -261,7 +261,12 @@
 <li>ICDAR 2003, 2013, SVT, IIT5k, Synth90k using bounding boxes for training</li>
 </ul></li>
 </ul>
-<h2 id="unsupervised-semi-supervised-multitask-learning">Unsupervised, Semi-Supervised, Multitask Learning</h2>
+<h2 id="domain-adaptation-unsupervised-semi-supervised-multitask-learning">Domain Adaptation, Unsupervised, Semi-Supervised, Multitask Learning</h2>
+<p>Domain Adaptation:</p>
+<ul>
+<li><a href="Learning/2017-liu-unsupervised-domain-adaptation.pdf">2017-liu-unsupervised-domain-adaptation</a></li>
+<li><a href="Learning/2017-tzen-adversarial-domain-discriminator-adaptation.pdf">2017-tzen-adversarial-domain-discriminator-adaptation</a></li>
+</ul>
 <p>Semi-Supervised Learning:</p>
 <ul>
 <li><a href="Learning/2005-zhu-semi-supervised.pdf">2005-zhu-semi-supervised</a>
@@ -281,7 +286,6 @@
 <li><a href="Learning/2016-lin-unsupervised-binary-descriptors.pdf">2016-lin-unsupervised-binary-descriptors</a></li>
 <li><a href="Learning/2016-radford-unsupervised-representation-learning.pdf">2016-radford-unsupervised-representation-learning</a></li>
 <li><a href="Learning/2016-xie-unsupervised-deep-embedding.pdf">2016-xie-unsupervised-deep-embedding</a></li>
-<li><a href="Learning/2017-liu-unsupervised-domain-adaptation.pdf">2017-liu-unsupervised-domain-adaptation</a></li>
 <li><a href="Learning/2017-ren-unsupervised-deep-flow.pdf">2017-ren-unsupervised-deep-flow</a></li>
 <li><a href="Learning/2017-lotter-unsupervised-predictive-video-coding.pdf">2017-lotter-unsupervised-predictive-video-coding</a></li>
 <li><a href="Learning/2018-li-unsupervised-odometry.pdf">2018-li-unsupervised-odometry</a></li>
