--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
 </ul>
 <p>Transfer and Multitask Learning:</p>
 <ul>
+<li><a href="Learning/2016-geng-transfer-learning-reid.pdf">2016-geng-transfer-learning-reid</a></li>
 <li><a href="Learning/2016-rusu-progressive-networks.pdf">2016-rusu-progressive-networks</a></li>
-<li><p><a href="Learning/2017-ruder-multitask-survey.pdf">2017-ruder-multitask-survey</a></p></li>
-<li><p><a href="Learning/2016-geng-transfer-learning-reid.pdf">2016-geng-transfer-learning-reid</a></p></li>
+<li><a href="Learning/2017-ruder-multitask-survey.pdf">2017-ruder-multitask-survey</a></li>
 </ul>
 <h2 id="gans">GANs</h2>
 <ul>
